# taskflow-mcp

./: .gitignore  .pre-commit-config.yaml  AGENT_DESCRIPTIONS.md  DEVELOPER.md  README.md  SPECIFICATION.md  pyproject.toml  pytest.ini  run_tests.py  start-mcp.sh
taskflow_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_integration.py  test_logging.py  test_main.py  test_server.py
