[project]
name = "taskflow-mcp"
version = "0.1.0"
description = "Filesystem-backed MCP server for task-based workflows"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "jsonschema"
]

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.7.2"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "trio>=0.26.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taskflow_mcp"]

[project.scripts]
taskflow-mcp = "taskflow_mcp.server:main"

[tool.pyright]
typeCheckingMode = "strict"
include = ["taskflow_mcp", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=taskflow_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
